--- a/WebStore1p/Views/Shared/Partial/_Header.cshtml
+++ b/WebStore1p/Views/Shared/Partial/_Header.cshtml
@@ -35,40 +35,9 @@
                     <div class="logo pull-left">
                         <a asp-controller="Home" asp-action="Index"><img src="~/images/home/logo.png" alt="" /></a>
                     </div>
-                    <div class="btn-group pull-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                USA
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canada</a></li>
-                                <li><a href="#">UK</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-                                DOLLAR
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Canadian Dollar</a></li>
-                                <li><a href="#">Pound</a></li>
-                            </ul>
-                        </div>
-                    </div>
                 </div>
                 <div class="col-sm-8">
-                    <div class="shop-menu pull-right">
-                        <ul class="nav navbar-nav">
-                            <li><a asp-controller="Account" asp-action="Register"><i class="fa fa-user"></i> Регистрация</a></li>
-                            <li><a href="#"><i class="fa fa-star"></i> Wishlist</a></li>
-                            <li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Заказ</a></li>
-                            <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-                            <li><a asp-controller="Account" asp-action="Login"><i class="fa fa-lock"></i> Вход</a></li>
-                        </ul>
-                    </div>
+                    <vc:user-info/>
                 </div>
             </div>
         </div>
