--- a/WebStore1p/Views/Account/Login.cshtml
+++ b/WebStore1p/Views/Account/Login.cshtml
@@ -11,13 +11,17 @@
             <div class="col-sm-4 col-sm-offset-1">
                 <div class="login-form">
                     <!--login form-->
-                    <h2>Login to your account</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
+                    <h2>Добро пожаловать!</h2>
+                    <form asp-controller="Account" asp-action="Login" asp-antiforgery="true" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                               
+                        @Html.HiddenFor(model => model.ReturnUrl);
+
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <input asp-for="Password" placeholder="Пароль" />
                         <span>
-                            <input type="checkbox" class="checkbox">
-                            Keep me signed in
+                            <input asp-for="RememberMe" class="checkbox">
+                            Запомнить меня
                         </span>
                         <button type="submit" class="btn btn-default">Login</button>
                     </form>
@@ -29,13 +33,21 @@
             <div class="col-sm-4">
                 <div class="signup-form">
                     <!--sign up form-->
-                    <h2>New User Signup!</h2>
-                    <form action="#">
-                        <input type="text" placeholder="Name" />
-                        <input type="email" placeholder="Email Address" />
-                        <input type="password" placeholder="Password" />
-                        <button type="submit" class="btn btn-default">Signup</button>
+                    <h2>Зарегистрироваться!</h2>
+                    <form asp-controller="Account" asp-action="Register" asp-antiforgery="true" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                        <input asp-for="UserName" placeholder="Имя пользователя" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+
+                        <input asp-for="Password" placeholder="Пароль" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+
+                        <input name="ConfirmPassword" id="ConfirmPassword" placeholder="Повторить пароль" />
+                        
+                        <button type="submit" class="btn btn-default">Зарегистрироваться</button>
                     </form>
+
                 </div><!--/sign up form-->
             </div>
         </div>
