--- a/WebStore1p/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore1p/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -3,7 +3,7 @@
         <li><a href="#"><i class="fa fa-star"></i> Желания</a></li>
         @*<li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Заказ</a></li>*@
         <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
-        <li><a asp-controller="Account" asp-action="Register"><i class="fa fa-user"></i> Профиль</a></li>
+        <li><a asp-controller="Account" asp-action="Profile"><i class="fa fa-user"></i> @User.Identity.Name</a></li>
         <li><a asp-controller="Account" asp-action="Logout"><i class="fa fa-lock"></i> Выход</a></li>
     </ul>
 </div>
