--- a/WebStore1p/Views/Account/Login.cshtml
+++ b/WebStore1p/Views/Account/Login.cshtml
@@ -15,7 +15,7 @@
                     <form asp-controller="Account" asp-action="Login" asp-antiforgery="true" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                                
-                        @Html.HiddenFor(model => model.ReturnUrl);
+                        @Html.HiddenFor(model => model.ReturnUrl)
 
                         <input asp-for="UserName" placeholder="Имя пользователя" />
                         <input asp-for="Password" placeholder="Пароль" />
