--- a/WebStore1p/Views/Shared/Components/UserInfo/UserInfo.cshtml
+++ b/WebStore1p/Views/Shared/Components/UserInfo/UserInfo.cshtml
@@ -1,5 +1,9 @@
 ﻿<div class="shop-menu pull-right">
     <ul class="nav navbar-nav">
+        @if (User.IsInRole(WebStore1p.Domain.Identity.Role.Administrator))
+        {
+            <li><a href="#"><i class="fa fa-key"></i> Админка</a></li>
+        }
         <li><a href="#"><i class="fa fa-star"></i> Желания</a></li>
         @*<li><a asp-controller="Home" asp-action="CheckOut"><i class="fa fa-crosshairs"></i> Заказ</a></li>*@
         <li><a asp-controller="Home" asp-action="Cart"><i class="fa fa-shopping-cart"></i> Корзина</a></li>
