--- a/WebStore1p/Views/Catalog/Details.cshtml
+++ b/WebStore1p/Views/Catalog/Details.cshtml
@@ -1,4 +1,8 @@
-﻿<section>
+﻿@model ProductViewModel
+@{ 
+    ViewData["Title"] = $"Товар {Model.Name}";
+}
+<section>
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
@@ -188,12 +192,12 @@
                     <div class="col-sm-7">
                         <div class="product-information">
                             <!--/product-information-->
-                            <img src="~/images/product-details/new.jpg" class="newarrival" alt="" />
-                            <h2>Anne Klein Sleeveless Colorblock Scuba</h2>
-                            <p>Web ID: 1089772</p>
+                            <img src="~/images/shop/@Model.ImageUrl" class="newarrival" alt="" />
+                            <h2>@Model.Name</h2>
+                            <p>Web ID: @Model.Id.ToString("0000000")</p>
                             <img src="~/images/product-details/rating.png" alt="" />
                             <span>
-                                <span>US $59</span>
+                                <span>@Model.Price.ToString("C")</span>
                                 <label>Quantity:</label>
                                 <input type="text" value="3" />
                                 <button type="button" class="btn btn-fefault cart">
@@ -203,7 +207,7 @@
                             </span>
                             <p><b>Availability:</b> In Stock</p>
                             <p><b>Condition:</b> New</p>
-                            <p><b>Brand:</b> E-SHOPPER</p>
+                            <p><b>Бренд:</b> @Model.Brand</p>
                             <a href=""><img src="~/images/product-details/share.png" class="share img-responsive" alt="" /></a>
                         </div><!--/product-information-->
                     </div>
