--- a/WebStore1p/Views/Shared/Partial/_FeaturesItems.cshtml
+++ b/WebStore1p/Views/Shared/Partial/_FeaturesItems.cshtml
@@ -13,13 +13,13 @@
                     <img src="~/images/home/@product.ImageUrl" alt="" />
                     <h2>@product.Price</h2>
                     <p><a asp_controller="Catalog" asp-action="Details" asp_route_id="@product.Id">@product.Name</a></p>
-                    <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
+                    <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                 </div>
                 <div class="product-overlay">
                     <div class="overlay-content">
                         <h2>@product.Price</h2>
                         <p><a asp_controller="Catalog" asp-action="Details" asp_route_id="@product.Id">@product.Name</a></p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
+                        <a asp-controller="Cart" asp-action="AddToCart" asp-route-id="@product.Id" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Добавить в корзину</a>
                     </div>
                 </div>
             </div>
